HAN-81 finish api for voice diary feature